Redis configuration added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=textfileDBApplication
 ####------Redis------------
-spring.redis.host=my-redis
+spring.redis.host=redis
 spring.redis.port=6379
-#spring.redis.password=aniket@12345G
+spring.redis.password=aniket@12345G
 #spring.redis.index=0
 #logging.level.org.springframework.cache=DEBUG
 
 
-server.port=9090
+server.port=8085
 server.servlet.context-path=/v1.0.0/apis/db
 
 management.endpoints.web.exposure.include=health
