--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,32 @@
-#version: '3.8'
+version: '3.8'
 #
 #services:
-#  redis:
-#    image: redis:latest
-#    container_name: redis
-#    networks:
-#      - spring-redis-network
-#
-#  springboot-app:
-#    image: db-application:1.3
-#    container_name: springboot-app
+#  app:
+#    image: db-application:3.0
 #    ports:
-#      - "8080:8080"
-#    environment:
-#      - SPRING_REDIS_HOST=redis
-#      - SPRING_REDIS_PORT=6379
+#      - "9090:9090"
 #    depends_on:
 #      - redis
-#    networks:
-#      - spring-redis-network
+#    environment:
+#      SPRING_PROFILES_ACTIVE: docker
 #
-#networks:
-#  spring-redis-network:
-#    driver: bridge
-
-version: '3.8'
+#  redis:
+#    image: redis:latest
+#    ports:
+#      - "6379:6379"
+#    volumes:
+#      - redis_data:/data
+#
+#volumes:
+#  redis_data:
 services:
+  app:
+    build: .
+    ports:
+      - "8085:8085"
+    links:
+      - redis
   redis:
     image: redis
-    container_name: redis
     ports:
-      - "6380:6379"  # Ensure the host port does not conflict
-
-  springboot-app:
-    build: .
-    container_name: springboot-app
-    ports:
-      - "8080:8080"
-    depends_on:
-      - redis
-    environment:
-      - SPRING_REDIS_HOST=redis
-      - SPRING_REDIS_PORT=6379
+      - "6379:6379"
